--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,7 @@
 body {
   margin: 0;
   padding: 0;
+   background: #20232a;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
     "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
@@ -11,4 +12,20 @@ body {
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
+}
+h4 {
+    text-transform: uppercase;
+    padding:15px 0;
+    text-align:center;
+    margin-bottom: 10px;
+    color:rgb(29, 17, 85);
+}
+.App {
+background:#fff;
+padding:40px 0;
+border-radius: 12px;
+}
+span.badge {
+  padding:0 10px;
+  margin:20px 20px 0 0;
 }
