--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,10 @@
 body {
   margin: 0;
   padding: 0;
-   background: #20232a;
+  background: #FC466B;  
+  background: -webkit-linear-gradient(to top, #3F5EFB, #FC466B);  
+   background: linear-gradient(to top, #3F5EFB, #FC466B); 
+
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
     "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
