--- a/src/index.css
+++ b/src/index.css
@@ -3,7 +3,10 @@ body {
   padding: 0;
   background: #FC466B;  
   background: -webkit-linear-gradient(to top, #3F5EFB, #FC466B);  
-   background: linear-gradient(to top, #3F5EFB, #FC466B); 
+  background: linear-gradient(to top, #3F5EFB, #FC466B); 
+  background-repeat:no-repeat;
+  height:100vh;
+  width:100%;
 
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
     "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
